# Project_BacaSable

./: .gitignore  .gitmodules  README.md
00_Requirements_Inputs/: 01_introduction_and_goals.md  01_introduction_and_goals_RTOS.md
01_Analysis/: 02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  04_solution_strategy_RTOS.md
01_Analysis/images/: Business_context.drawio  Technical_context.drawio
02_Architecture_Modelisation/: 05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_technical_risks.md
02_Architecture_Modelisation/05_building_block_views_level_2/: 05_building_block_view_level_2.md
02_Architecture_Modelisation/images/: Building_block_L1.drawio  deployment_diagram.drawio
03_Development/code/: .gitmodules  README.md
03_Development/code/src/: CMakeLists.txt
03_Development/code/src/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
03_Development/code/src/blink/: CMakeLists.txt  blink.c
06_Doc/: brainstorm.md
